<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="business"
            type="com.example.yeplapp.data.model.Businesses" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.bussinesdetails.BusinessDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient"/>

            </FrameLayout>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:maxLines="2"
                android:layout_marginHorizontal="16dp"
                android:text="@{business.name}"
                tools:text="@string/details_title">
            </TextView>

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/frame"
                android:singleLine="true"
                android:gravity="center"
                android:textColor="@color/white"
                tools:text="1.2"
                android:text="@{String.valueOf(business.rating)}"
                app:drawableRightCompat="@drawable/ic_baseline_star_rate_24">
            </TextView>

            <TextView
                android:id="@+id/txtBusinessInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frame"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/details_information_title"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/txtBusinessCategoryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessInformation"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="20sp"
                android:text="@string/details_category_title"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/txtBusinessCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessCategoryTitle"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/black"
                tools:text="@string/details_category_title"
                android:textStyle="italic">
            </TextView>


            <TextView
                android:id="@+id/txtBusinessAddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessCategory"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="20sp"
                android:text="@string/details_address_title"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/txtBusinessAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessAddressTitle"
                tools:text="@string/details_address_title"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/black"
                android:textStyle="italic">
            </TextView>

            <TextView
                android:id="@+id/txtBusinessPriceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessAddress"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="20sp"
                android:text="@string/details_price_title"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/txtBusinessPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessPriceTitle"
                tools:text="@string/details_price_title"
                android:text="@{business.price}"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/black"
                android:textStyle="italic">
            </TextView>


            <TextView
                android:id="@+id/txtBusinessPhoneTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessPrice"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="20sp"
                android:text="@string/details_phone_title"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/txtBusinessPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessPhoneTitle"
                android:text="@{business.display_phone}"
                tools:text="@string/details_phone_title"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/black"
                android:textStyle="italic">
            </TextView>

            <TextView
                android:id="@+id/txtBusinessLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessPhone"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/details_location_title"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold">
            </TextView>

           <com.google.android.gms.maps.MapView
               android:id="@+id/mapView"
               android:layout_width="match_parent"
               android:layout_height="450dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginBottom="30sp"
               android:layout_marginTop="16dp"
               app:layout_constraintTop_toBottomOf="@id/txtBusinessLocation">
           </com.google.android.gms.maps.MapView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>