<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="135dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/imgBusiness"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@mipmap/ic_launcher">
            </ImageView>

            <TextView
                android:id="@+id/txtBusinessName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgBusiness"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/search_business_name"
                android:maxLines="1"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="8dp"/>

            <TextView
                android:id="@+id/txtBusinessCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessName"
                app:layout_constraintStart_toEndOf="@id/imgBusiness"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/search_business_category"
                android:maxLines="1"
                android:textStyle="italic"
                android:ellipsize="end"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="8dp"/>

            <TextView
                android:id="@+id/txtBusinessAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtBusinessCategory"
                app:layout_constraintStart_toEndOf="@id/imgBusiness"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/search_business_address"
                android:maxLines="2"
                android:textStyle="italic"
                android:ellipsize="end"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="8dp"/>

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:singleLine="true"
                android:gravity="center"
                tools:text="1.2"
                app:drawableRightCompat="@drawable/ic_baseline_star_rate_24">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>